compiler/testData/diagnostics/tests/redeclarations/EnumName.kt
enum class A {
    <!REDECLARATION!>name<!>
}
